gcc/testsuite/rust/rustc/ui/loops/issue-82916_dg.rs
struct S(i32);

fn foo(x: Vec<S>) {
    for y in x {

    }
    let z = x; // { dg-error ".E0382." "" { target *-*-* } }
}

fn main() {}

